changed colors in css, added times to html and javascript

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
     <section class="text-center notification" id="notify">Appointment Added to <code>localStorage</code>✔️
     </section>
     <div class="container">
-      <!-- Timeblocks go here -->     
+      <!-- Timeblocks go here -->   
+        <div class="row time-block" id="hour-8">
+            <div class="col-md-1 hour">8:00 am</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>  
         <div class="row time-block" id="hour-9">
             <div class="col-md-1 hour">9:00 am</div>
             <textarea class="col-md-10 description"></textarea>
@@ -78,6 +83,11 @@
         </div>
         <div class="row time-block" id="hour-17">
             <div class="col-md-1 hour">5:00 pm</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div class="row time-block" id="hour-18">
+            <div class="col-md-1 hour">6:00 pm</div>
             <textarea class="col-md-10 description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
