--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
     <section class="text-center notification" id="notify">Appointment Added to <code>localStorage</code>✔️
     </section>
     <div class="container">
-      <!-- Timeblocks go here -->   
+      <!-- Timeblocks go here -->
+        <div class="row time-block" id="hour-7">
+          <div class="col-md-1 hour">7:00 am</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>   
         <div class="row time-block" id="hour-8">
             <div class="col-md-1 hour">8:00 am</div>
             <textarea class="col-md-10 description"></textarea>
@@ -90,6 +95,11 @@
             <div class="col-md-1 hour">6:00 pm</div>
             <textarea class="col-md-10 description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div class="row time-block" id="hour-19">
+          <div class="col-md-1 hour">7:00 pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
     </div>
     
